# pokemon-graphql

./: .env.default  .gitignore  Cargo.toml  Dockerfile
.github/workflows/: audit.yml  deploy.yml  migrate-db.yml  test-db.yml  test.yml
.sqlx/: query-01bae151735f361c7f044188e31894191f4f8547e4c1a0b95b7630d09ce71869.json  query-0fd9a75afd999c2d4a369ce742a0225f1b80c706fd632c6bdd977a3f95d61b23.json  query-11b1bdd2d0c66086328ed68231faec1061efb42e5a43c4504a34ab9d7f71b111.json  query-1b45d34e0b17cfc2926c2442423710111117dc47eb371920dc81812ad8e43e1c.json  query-558eff95ac229a682b209ae3915891cee45da1bffcec37c643523bb2cd13d704.json  query-bb55d4b7e00ea3dc5076255f46bb0ae9a4f76c325f12d03922685fa3b102e583.json  query-f3c9c2e4a8fc16ffa7759ff389b5ebe00656279b9eb8bc3a8b52afcddba80d73.json  query-fddce009c84fbc5cbde6f1adbca0dbdf11cc3384c54d1e19e09f8e28e3269ecb.json
crates/core/: config.rs  env.rs  lib.rs  main.rs  schema.rs  subscriber.rs  utils.rs
crates/pokemon/: Cargo.toml
crates/pokemon/src/: input.rs  lib.rs  mutation.rs  query.rs  repo.rs
crates/schema/: Cargo.toml
crates/schema/src/: lib.rs  schema.rs
crates/schema/src/account/: input.rs  mutation.rs  object.rs  query.rs  repo.rs
crates/schema/src/pokemon/: input.rs  mod.rs  mutation.rs  object.rs  query.rs  repo.rs
crates/shared/: Cargo.toml
crates/shared/src/: env.rs  lib.rs  settings.rs  validate.rs
crates/shared/src/scalars/: email.rs  mod.rs
crates/tests/: account.rs  mod.rs  pokemon.rs  utils.rs
migrations/: 20240222135504_add_pokemon_table.down.sql  20240222135504_add_pokemon_table.up.sql  20240224110215_create_language_table.down.sql  20240224110215_create_language_table.up.sql  20240225151600_set_id_pokemon_to_optional.down.sql  20240225151600_set_id_pokemon_to_optional.up.sql  20240225161708_alter_pokemon__id_to_id.down.sql  20240225161708_alter_pokemon__id_to_id.up.sql  20240225165216_create_account_table.down.sql  20240225165216_create_account_table.up.sql
scripts/: init_db.sh  run_container.sh
