[package]
name = "pokemon-graphql"
version = "0.1.0"
edition = "2021"
rust-version = "1.76.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "corelib"
path = "crates/core/lib.rs"

[[bin]]
name = "pokemon-graphql"
path = "crates/core/main.rs"

[[test]]
name = "integration"
path = "crates/tests/mod.rs"

[workspace]
members = ["crates/schema"]

[dependencies]

# Crates dependency
schema = { version = "1.0.0", path = "crates/schema" }

# Core dependency
axum = { version = "0.7.4", features = ["default", "tracing", "tower-log"] }
tower-http = { version = "0.5.0", features = ["cors", "trace"] }
serde = { version = "1.0.196" }
tokio = { version = "1.36.0", features = ["full"] }
async-graphql = { version = "7.0.2", features = ["default", "tracing"] }
async-graphql-axum = { version = "7.0.1" }

# Tracing Related
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = { version = "0.3.18", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = { version = "0.3.9" }
tracing-log = { version = "0.2.0" }

# Utils
once_cell = { version = "1.19.0" }
tower = { version = "0.4.13" }
secrecy = { version = "0.8.0", features = ["serde"] }
config = { version = "0.14.0" }
dotenvy = { version = "0.15.7" }
uuid = { version = "1.7.0", features = ["v7", "std"] }
chrono = { version = "0.4.34", default-features = false, features = ["clock"] }
serde_json = { version = "1.0.114" }

# SQLX
[dependencies.sqlx]
version = "0.7.3"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]
