[package]
name = "shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = { version = "0.14.0" }
serde = { version = "1.0.197", features = ["derive"] }
tracing = { version = "0.1.40", features = ["log"] }
secrecy = { version = "0.8.0", features = ["serde"] }
dotenvy = { version = "0.15.7" }
async-graphql = { version = "7.0.2" }
fast_chemail = { version = "0.9.6" }

[dependencies.sqlx]
version = "0.7.3"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]
